--- a/LibraryTests/LibraryTests.csproj
+++ b/LibraryTests/LibraryTests.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VideoStore\CustomerTest.cs" />
     <Compile Include="LibraryTest\Controllers\PatronsControllerTest.cs" />
     <Compile Include="LibraryTest\Models\BookCheckoutPolicyTest.cs" />
     <Compile Include="LibraryTest\Models\BranchServiceTest.cs" />
