--- a/LibraryTests/LibraryTests.csproj
+++ b/LibraryTests/LibraryTests.csproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <Compile Include="LibraryTest\Controllers\CheckInControllerTest.cs" />
     <Compile Include="LibraryTest\Controllers\CheckOutControllerTest.cs" />
+    <Compile Include="LibraryTest\Controllers\HoldingsControllerTest.cs" />
     <Compile Include="VideoStore\CustomerTest.cs" />
     <Compile Include="LibraryTest\Controllers\PatronsControllerTest.cs" />
     <Compile Include="LibraryTest\Models\BookCheckoutPolicyTest.cs" />
