--- a/LibraryTests/LibraryTests.csproj
+++ b/LibraryTests/LibraryTests.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LibraryTest\ControllerHelpers\BranchesControllerUtilTest.cs" />
     <Compile Include="LibraryTest\Controllers\CheckInControllerTest.cs" />
     <Compile Include="LibraryTest\Controllers\CheckOutControllerTest.cs" />
     <Compile Include="LibraryTest\Controllers\HoldingsControllerTest.cs" />
@@ -98,7 +99,6 @@
     <Compile Include="LibraryTest\Controllers\PatronsControllerTest.cs" />
     <Compile Include="LibraryTest\Models\BookCheckoutPolicyTest.cs" />
     <Compile Include="LibraryTest\Models\CheckoutPolicyTest.cs" />
-    <Compile Include="LibraryTest\Models\HoldingServiceTest.cs" />
     <Compile Include="LibraryTest\Models\HoldingTest.cs" />
     <Compile Include="LibraryTest\Models\Repositories\InMemoryRepositoryTest.cs" />
     <Compile Include="LibraryTest\Models\MasterClassificationServiceTest.cs" />
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
